test_data/deployment-stdout.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  labels:
    app: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-container
        image: registry.cn-shenzhen.aliyuncs.com/vvlisn/nginx:latest
        env:
        - name: varlog
          value: /var/log/app.log
